tests/copies/newAndNeedChangeTests/fail/Goto.java
package fail;

import java.lang.System;

public class Goto {

  public static void main(String[] args ) {
    boolean goto = true;
  }

}
